grammar-ia3.txt
prog  : block 'EOF'
block : stmt ';' block
      | stmt
stmt  : assn
      | 'wr' expr
assn  : id '=' expr
expr  : term addop expr
      | term
term  : fact mulop term
      | fact
fact  : id
      | num
      | '(' expr ')'
	 | '-' fact
addop : '+'
      | '-'
mulop : '*'
      | '/'
