syntax/Parser.java
package syntax;

import node.*;

/**
 * A recursive descent parser
 */
public class Parser {

    private Lexer lexer;
    private Token lookahead;

    /**
     * Parse an input program and return a Node that is the root of the
     * resulting parse tree.
     *
     * @param program String to be scanned and parsed
     * @return the Root Node of a parse tree
     * @throws SyntaxException - If there is a syntax error
     */
    public Node parse(String program) throws SyntaxException {
        lexer = new Lexer(program);
        lookahead = lexer.next(); // "prime the pump"
        Block block = parseBlock();
        match("EOF");
        return block;
    }

    /**
     * @return Expr
     * @throws SyntaxException
     */
    private Expr parseExpr() throws SyntaxException {

        Term term = parseTerm();
        Addop addop = parseAddop();

        if (addop == null) {
            return new Expr(term);
        } else {
            Expr expr = parseExpr();
            expr.append(new Expr(term, addop, null));
            return expr;
        }
    }

    /**
     * @return Block
     * @throws SyntaxException
     */
    private Block parseBlock() throws SyntaxException {
        Stmt stmt = parseStmt();
        Token current = lookahead;

        if (current.equalType(new Token(";"))) {
            match(";");
            Block block = parseBlock();
            return new Block(stmt, block);
        } else {
            return new Block(stmt);
        }

    }

    /**
     * @return Stmt
     * @throws SyntaxException
     */
    private Stmt parseStmt() throws SyntaxException {
        Token current = lookahead;
        Assn assn = parseAssn();
        if (assn == null) {
            if (current.equalType(new Token("wr"))) {
                match("wr");
                Write wr = parseWrite(parseExpr());
                return new Stmt(wr);
            } else {
                throw new SyntaxException(lexer.getPosition(), current, current);
            }
        } else {
            return new Stmt(assn);
        }

    }

    private Write parseWrite(Expr expr) throws SyntaxException {
        return new Write(expr);
    }

    private Assn parseAssn() throws SyntaxException {
        Token current = lookahead;
        if (!current.equalType(new Token("id"))) {
            return null;
        }
        Fact fact = parseFact();
        current = lookahead;
        if (current.equalType(new Token("="))) {
            match("=");
            Expr expr = parseExpr();
            return new Assn(fact, expr);
        } else {
            throw new SyntaxException(lexer.getPosition(), current, current);
        }
    }

    /**
     * @return Term Node
     * @throws SyntaxException
     */
    private Term parseTerm() throws SyntaxException {

        Fact fact = parseFact();
        Mulop mulop = parseMulop();

        if (mulop == null) {
            return new Term(fact);
        } else {
            Term term = parseTerm();
            term.append(new Term(fact, mulop, null));
            return term;
        }

    }

    /**
     * @return Fact Node
     * @throws SyntaxException
     */
    private Fact parseFact() throws SyntaxException {

        Token current = lookahead;

        if (current.equalType(new Token("id"))) {
            match("id");
            return new FactID(current);
        } else if (current.equalType(new Token("num"))) {
            match("num");
            return new FactNum(current);
        } else if (current.equalType(new Token("("))) {
            match("(");
            Expr expr = parseExpr();
            match(")");
            return new FactParExpPar(expr);
        } else if (current.equalType(new Token("-"))) {
            match("-");
            return new NegFact(current, parseFact());

        } else {
            throw new SyntaxException(lexer.getPosition(), current, current);
        }
    }

    /**
     * Parses an Addop nonterminal and returns it.
     * 
     * @return a Node that represent an addop
     * @throws SyntaxException if an invalid terminal is discovered
     */
    private Addop parseAddop() throws SyntaxException {
        Token addop = lookahead;
        if (addop.equalType("+")) {
            match("+");
            return new Addop(lexer.getPosition(), addop);

        } else if (addop.equalType("-")) {
            match("-");
            return new Addop(lexer.getPosition(), addop);

        } else {
            return null;
        }
    }

    /**
     * @return a Mulop Node
     * @throws SyntaxException
     */
    private Mulop parseMulop() throws SyntaxException {
        Token mulop = lookahead;
        if (mulop.equalType("*")) {
            match("*");
            return new Mulop(lexer.getPosition(), mulop);

        } else if (mulop.equalType("/")) {
            match("/");
            return new Mulop(lexer.getPosition(), mulop);

        } else {
            return null;
        }

    }

    private void match(String s) throws SyntaxException {
        if (lookahead.equalType(s)) {
            lookahead = lexer.next();
        } else {
            throw new SyntaxException(lexer.getPosition(), new Token(s), lookahead);
        }
    }
}